<resources>
    <string name="app_name">Ballot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="result">Result</string>
    <string name="logout">Logout</string>

    <string-array name="departments">
        <item>MCA</item>
        <item>EXTC</item>
        <item>ETRX</item>
        <item>IT</item>
        <item>COMPS</item>
    </string-array>

    <string-array name="departments2">
        <item>Select Department</item>
        <item>MCA</item>
        <item>EXTC</item>
        <item>ETRX</item>
        <item>IT</item>
        <item>COMPS</item>
    </string-array>

    <string-array name="CLASSES">
        <item>FY</item>
        <item>SY</item>
        <item>TY</item>
    </string-array>

    <string-array name="post_array">
        <item>Android</item>
        <item>Java</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
